crates/functions/src/tests/conversion/snapshots/to_date/query_to_date_yy_format_2.snap
---
source: crates/functions/src/tests/conversion/to_date.rs
description: "\"SELECT TO_DATE('5/7/99', 'MM/DD/YY')\""
---
Ok(
    [
        "+------------------------------------------+",
        "| to_date(Utf8(\"5/7/99\"),Utf8(\"MM/DD/YY\")) |",
        "+------------------------------------------+",
        "| 1999-05-07                               |",
        "+------------------------------------------+",
    ],
)
