crates/functions/src/tests/conversion/snapshots/to_date/query_to_date_yy_format_3.snap
---
source: crates/functions/src/tests/conversion/to_date.rs
description: "\"SELECT TRY_TO_DATE('5/7/100', 'MM/DD/YY')\""
---
Ok(
    [
        "+-----------------------------------------------+",
        "| try_to_date(Utf8(\"5/7/100\"),Utf8(\"MM/DD/YY\")) |",
        "+-----------------------------------------------+",
        "|                                               |",
        "+-----------------------------------------------+",
    ],
)
