crates/functions/src/tests/conversion/snapshots/to_date/query_to_date_yy_format_5.snap
---
source: crates/functions/src/tests/conversion/to_date.rs
description: "\"SELECT TO_DATE('5/7/2000', 'MM/DD/YY')\""
---
Ok(
    [
        "+--------------------------------------------+",
        "| to_date(Utf8(\"5/7/2000\"),Utf8(\"MM/DD/YY\")) |",
        "+--------------------------------------------+",
        "| 2000-05-07                                 |",
        "+--------------------------------------------+",
    ],
)
