crates/functions/src/tests/conversion/snapshots/to_date/query_to_date_yyyy_format_2.snap
---
source: crates/functions/src/tests/conversion/to_date.rs
description: "\"SELECT TRY_TO_DATE('5/7/2000', 'MM/DD/YYYY')\""
---
Ok(
    [
        "+--------------------------------------------------+",
        "| try_to_date(Utf8(\"5/7/2000\"),Utf8(\"MM/DD/YYYY\")) |",
        "+--------------------------------------------------+",
        "| 2000-05-07                                       |",
        "+--------------------------------------------------+",
    ],
)
