crates/functions/src/tests/conversion/snapshots/to_date/query_try_to_date.snap
---
source: crates/functions/src/tests/conversion/to_date.rs
description: "\"SELECT TRY_TO_DATE('2024-05-10') AS valid_date,\n        TRY_TO_DATE('Invalid') AS invalid_date\""
---
Ok(
    [
        "+------------+--------------+",
        "| valid_date | invalid_date |",
        "+------------+--------------+",
        "| 2024-05-10 |              |",
        "+------------+--------------+",
    ],
)
